Replacing stdout printing with logging